Bug 106749. Make sure template builder only tries to build content if it's the _closest_ builder to the lazy node. r=rjc, sr=shaver